--- a/scss/site/_products.scss
+++ b/scss/site/_products.scss
@@ -209,8 +209,7 @@
 
 .custom-product-banner {
     padding: 1.25rem;
-    border-bottom: 0.0625rem solid #D7D7D7;
-
+    border-bottom:none;
     .imgBox {
         margin-bottom: 1.5rem;
         position: relative;
@@ -331,6 +330,47 @@
             color: inherit;
             text-decoration: none;
         }
+    }
+}
+
+.tabs-section {
+    .border-wrap {
+        border-bottom:1px solid #D7D7D7;
+        ul.tabs {
+            position:relative;
+            top:1px;
+            background:none;
+            border:none;
+            li {
+                margin-right:rem-calc(10);
+                border:1px solid #d7d7d7;
+                box-sizing: border-box;
+                @media #{$small-only} {
+                    width:100%;
+                }
+                a {
+                    text-decoration:none;
+                    text-transform:uppercase;
+                    background-color:#FBFBFB;
+                    font-size:rem-calc(14);
+                    padding:rem-calc(8) rem-calc(35);
+                    @media #{$small-only} {
+                        text-align:center;
+                    }
+                }
+            }
+            li.tabs-title.is-active {
+              border-bottom:1px solid #fff;
+              a {
+                font-weight:$font-weight-bold;
+                color:$primary-color;
+                background-color:$white;
+              }
+            }
+        }
+    }
+    .tabs-content {
+        padding-top:rem-calc(20);
     }
 }
 
@@ -512,132 +552,6 @@
     }
 }
 
-/**
- *
- * Custom product banner
- *
- */
-
-.custom-product-banner {
-    padding: 1.25rem;
-    border-bottom: 0.0625rem solid #D7D7D7;
-
-    .imgBox {
-        margin-bottom: 1.5rem;
-        position: relative;
-
-        .guarantee-seal {
-            position: absolute;
-            right: -20px;
-            bottom: 0;
-            width: 100px;
-        }
-    }
-
-    .free-shipping {
-        margin-bottom: 1.5rem;
-    }
-
-    .productMeta {
-        padding-left: 3rem;
-
-        h1 {
-            font-size: 1rem;
-            line-height: 1rem;
-            color: #B1B1B1;
-            font-weight: 400;
-            margin: 0.5rem 0 0.5rem;
-        }
-
-        h2 {
-            font-size: 2.125rem;
-            line-height: 2.25rem;
-            color: #231D26;
-            font-weight: 800;
-            margin-bottom: 0.5rem;
-        }
-
-        ul li {
-            font-size: 1.125rem;
-            line-height: 1.5rem;
-            font-weight: 700;
-        }
-
-        .qtyBox {
-            margin-bottom: 1rem;
-        }
-
-        .qty {
-            float: left;
-            margin-right: 0.5rem;
-            padding: 0.375rem 0;
-        }
-
-        select {
-            margin-bottom: 0;
-            width: auto;
-            padding-right: 2rem;
-        }
-
-        .pricing {
-            margin-bottom: 0.875rem;
-
-            span {
-                display: block;
-
-                span {
-                    display: inline;
-                }
-            }
-
-            .retail {
-                font-size: 1.25rem;
-                line-height: 1.25rem;
-                font-weight: 700;
-                color: #444;
-                text-decoration: line-through;
-                margin-bottom: 0.125rem;
-            }
-
-            .price {
-                font-size: 1.5rem;
-                line-height: 1.5rem;
-                font-weight: 800;
-                color: #231D26;
-            }
-
-            .savings {
-                font-size: 1.25rem;
-                line-height: 1.25rem;
-                font-weight: 700;
-                color: #C30C3B;
-            }
-        }
-
-        .addToCart {
-            border: 0.0625rem solid #4A9F18;
-            border-radius: 4px;
-            background: #3EB914;
-            font-size: 1.25rem;
-            font-weight: 700;
-            padding: 1.125rem 3rem;
-
-            &:hover {
-                background: #73D63A;
-            }
-        }
-    }
-
-    .test-disclaimer {
-        font-size: rem-calc(16);
-        font-weight: 400;
-
-        a {
-            color: inherit;
-            text-decoration: none;
-        }
-    }
-}
 
 /* All Prods Styles */
 #product_list {
