fixed tab styles

--- a/modules/banner/_banner.scss
+++ b/modules/banner/_banner.scss
@@ -15,5 +15,8 @@
 		color:#444; 
 		font-size:rem-calc(16);
 		background:#EFEFEF;
+		@media #{$small-only} {
+            padding:rem-calc(20);
+        }
 	}
 }
