--- a/modules/banner/_banner.scss
+++ b/modules/banner/_banner.scss
@@ -6,7 +6,7 @@
 		border:none;
 	}
 	.tabs-title > a:focus, .tabs-title > a[aria-selected='true'] {
-		background:#39B8EE;
+		background:#033A61;
 		color:$white;
 	}
 	.tabs-title > a {
