fixed colors and dislcaimer in tab buytable

--- a/scss/site/_products.scss
+++ b/scss/site/_products.scss
@@ -357,6 +357,7 @@
                     background-color:#FBFBFB;
                     font-size:rem-calc(14);
                     padding:rem-calc(8) rem-calc(35);
+                    color:#033a61;
                     @media #{$small-only} {
                         text-align:center;
                     }
