--- a/modules/ratings/ratings.scss
+++ b/modules/ratings/ratings.scss
@@ -65,6 +65,11 @@
     .upsell-title {
         font-size: rem-calc(24);
         margin: 0 0 rem-calc(10) 0;
+        
+        @media #{$small-only} {
+            line-height:1;
+            margin-bottom:rem-calc(15);
+        }
 
         a {
             color: inherit;
@@ -155,5 +160,17 @@
         margin: 0;
         width: 100%;
         padding: rem-calc(7) 0;
+    }
+}
+h2.top-list {
+    @media #{$small-only} {
+       font-size:rem-calc(30);
+       text-align:center;
+       line-height:1; 
+    }
+}
+.upsell-content {
+    @media #{$small-only} {
+        margin-top:rem-calc(10);
     }
 }
