--- a/scss/config/_custom-settings.scss
+++ b/scss/config/_custom-settings.scss
@@ -6,8 +6,8 @@
 // Set site width
 $grid-row-width: rem-calc(1000);
 $column-gutter: rem-calc(30);
-//$imgPath: "/wp-content/uploads";
-$imgPath: "http://localhost/maleenhancementpills.com/wp-content/uploads";
+$imgPath: "/wp-content/uploads";
+//$imgPath: "http://localhost/maleenhancementpills.com/wp-content/uploads";
 $grid-column-count: 24;
 
 // Typography
