made 8 for men full width

--- a/scss/site/_products_custom.scss
+++ b/scss/site/_products_custom.scss
@@ -806,3 +806,20 @@
         } 
     }
 }
+.postid-120 {
+	.prod-row-wrap {
+		width:100%;
+		max-width:100%;
+	}
+	.eightformen {
+		.row {
+			margin:0 auto;
+		}
+		.bonus-bg {
+			background: $guarantee-bg;
+		}
+	}
+	.buy-row-wrap {
+		margin:0 auto!important;
+	}
+}
