misc 8 for men fixes

--- a/modules/buy-table/buy-table.scss
+++ b/modules/buy-table/buy-table.scss
@@ -115,6 +115,11 @@
         i {
             margin: 0 0 0 rem-calc(6);
         }
+        .mfes-trustmark {
+            position:relative;
+            top:rem-calc(-3);
+            left:rem-calc(8);
+        }
     }
 
     .four-columns {
