--- a/scss/foundation.scss
+++ b/scss/foundation.scss
@@ -83,6 +83,7 @@
 @import "site/footer";
 @import "site/sidebar";
 @import "site/front-page-banner";
+@import "site/all_products";
 @import "site/custom-styles";
 
 @import "../modules/ratings/ratings";
