--- a/scss/site/_global.scss
+++ b/scss/site/_global.scss
@@ -79,3 +79,19 @@ figure {
 .pagination li.current a {
 	color:#fff;
 }
+.contact-content {
+    @media #{$medium-up} {
+        padding-top:rem-calc(115);
+    }
+}
+.bottom-button {
+	position:fixed;
+	bottom:0;
+	left:0;
+	width:100%;
+	margin-bottom:0;
+	font-size: rem-calc(20);
+    font-weight: 700;
+    border-radius:0!important;
+    display:none;
+}
