fixed suppfacts bottle image size

--- a/modules/banner/_banner.scss
+++ b/modules/banner/_banner.scss
@@ -235,4 +235,12 @@
     		padding-right:0;
     	}
     }
+    .ingredients {
+        .show-for-medium {
+            img {
+                max-height:rem-calc(355);
+                float:right;
+            }
+        }
+    }
 }
