--- a/scss/config/_custom-settings.scss
+++ b/scss/config/_custom-settings.scss
@@ -160,6 +160,7 @@ $topbar-margin-top: rem-calc(6); // vertically center the logo
 $topbar-margin-left: $column-gutter / 2; // align left side of logo with content
 $titlebar-height: rem-calc(45);
 $tabbar-margin-top: rem-calc(0); // vertically center logo
+$topbar-menu-border: #1C58B1;
 
 $tip-top-bg-color: #1C58B1;
 $tip-top-color: $white;
