dropdown font size tweaks

--- a/scss/site/_topbar.scss
+++ b/scss/site/_topbar.scss
@@ -198,6 +198,7 @@
                 float:left;
                 padding-top:rem-calc(15);
                 text-align:center;
+                font-size:rem-calc(18);
             }
             img {
                 float:left;
@@ -208,6 +209,7 @@
             .nav-rating {
                 text-align:right;
                 padding-top:rem-calc(15);
+                font-size:rem-calc(15);
             }
             &.all-prods-nav {
                 padding-top:rem-calc(10);
